Data loaders + rest api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.datasource.url=jdbc:h2:mem:airports
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
+#Disable batch job's auto start 
+spring.batch.job.enabled=false
+spring.main.banner-mode=off
+ 
