--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,20 @@
-spring.datasource.url=jdbc:h2:mem:airports
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+
+
+####### MYSQL ########
+spring.datasource.url=jdbc:mysql://ms/airports    
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
+######## H2 in mem conf #########""
+#spring.datasource.url=jdbc:h2:mem:airports
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 #spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
 #Disable batch job's auto start 
 spring.batch.job.enabled=false
-spring.main.banner-mode=off
- 
+spring.batch.jdbc.initialize-schema = ALWAYS
