--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 
 
 ####### MYSQL ########
-spring.datasource.url=jdbc:"mysql"://ms/airports    
+spring.datasource.url=jdbc:mysql://ms-dev/airports    
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
@@ -13,7 +13,6 @@ spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
 
 #Disable batch job's auto start 
 spring.batch.job.enabled=false
