--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,7 @@
 
 
 ####### MYSQL ########
-spring.datasource.url=jdbc:"mysql"://ms/airports    
+spring.datasource.url=jdbc:mysql://ms-test/airports    
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
